@startuml JournalProgram

class Journal {
    - List<JournalEntry> _entries
    + void AddEntry(string prompt, string response)
    + void DisplayEntries()
    + void SaveToFile(string filename)
    + void LoadFromFile(string filename)
    + void EditEntry()
}

class JournalEntry {
    - string _date
    - string _prompt
    - string _response
    + string GetDate()
    + string GetPrompt()
    + string GetResponse()
    + void UpdateResponse(string newResponse)
    + void Display()
}

class JournalPrompt {
    - List<string> _prompts
    + string GetPrompt()
}

Journal --> "*" JournalEntry : contains
Journal --> JournalPrompt : uses

@enduml